refactor: Update application name and branding
Replaces "KAIZEN REVOLUTION" with "co-mit" across the application's title, package name, and metadata. Introduces a new CoMit logo icon and integrates it into the header alongside the updated application name. Adjusts styling for the new branding elements.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "co-mit(co-most-inovative-technology)",
+  "name": "co-mit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
